# wallex-mcp

./: .gitignore  README.md  pyproject.toml
wallex_mcp/: client.py  config.py  mcp.py  schemas.py  server.py
wallex_mcp/resources/: resource_handlers.py
wallex_mcp/tools/: balance.py  cancel_order.py  get_balance.py  markets.py  order.py  place_order.py
