[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wallex-mcp"
version = "0.1.0"
description = "Wallex MCP server built on FastMCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pre-commit"]

[tool.setuptools.packages.find]
where = ["."]
include = ["wallex_mcp*"]
